# rust-ecomm

./: Cargo.toml  Makefile
assets/: main.css  modal.js
src/: cookies.rs  extractors.rs  handlers.rs  main.rs  router.rs  routers.rs
src/products/: dtos.rs  mod.rs  repos.rs
src/products/domain/: cart.rs  cart_id.rs  mod.rs  product.rs  product_desc.rs  product_id.rs  product_price.rs  product_slug.rs  product_title.rs  product_validation_error.rs
src/products/use_cases/: add_to_cart.rs  create_product.rs  delete_product.rs  get_product.rs  get_product_detail.rs  get_products.rs  mod.rs  update_product.rs
src/views/: mod.rs
src/views/pages/: mod.rs  not_found_view.rs  product_list_view.rs  server_error_view.rs
src/views/partials/: mod.rs  product_form_view.rs
templates/: Cart.html  Modal.html  Navbar.html  base-admin.html  base.html  cart.html  home.html  modal.html  product-create.html  product-detail.html  product-list.html  product_detail.html
templates/admin/: base_admin.html
templates/admin/pages/: 404.html  500.html  create_product.html  product_list.html
templates/admin/partials/: product_form.html  rich_text_input.html  text_input.html
