[package]
name = "rust-ecomm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
once_cell = "1.18.0"
rusty-money = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
slug = "0.1.4"
surrealdb = "1.0.0"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.0", features = ["serde"] }
validator = "0.16.1"
